CSS for barcode and login page added

--- a/login.html
+++ b/login.html
@@ -2,6 +2,64 @@
 <html>
     <head>
         <title>Login</title>
-        <h1>THIS IS THE LOGIN PAGE</h1>
+        <link rel="stylesheet" href="style.css">
     </head>
+
+
+
+    <body>
+        <div id="login-background">
+
+
+            <div id="top-bar">
+                <div class="top-bar-button">
+                    <a href="/">Home</a>
+                </div>
+                <div class="top-bar-button">
+                    <a href="about.html" target="_blank">About</a>
+                </div>
+                <div class="top-bar-button">
+                    <a href="contact.html" target="_blank">Contact</a>
+                </div>
+                <div class="top-bar-button">
+                    <a href="login.html" target="_blank">Login</a>
+                </div>
+            </div>
+
+            <div id="login-block-container">
+                <div id="login-block">
+                    <div id="login-title">
+                        <h1>Login</h1>
+                    </div>
+
+                    <div id="login-instructions">
+                        <h1>Sign in to your account</h1>
+                    </div>
+
+                    <div id="login-input-container">
+                        <div class="login-input-box">
+                            <input id="login-input-text" type="text" placeholder="Username">
+                        </div>
+                        
+                        <div class="login-input-box">
+                            <input id="login-input-text" type="text" placeholder="Password">
+                        </div>
+
+                        <!-- Might need to be changed to "submit" -->
+                        <button id="login-button" type="button">Login</button>
+
+                        <div id="login-input-container">
+                            Forgot your password? Click here to reset.
+                        </div>
+                        
+                    </div>
+
+                </div>
+            </div>
+
+
+
+
+        </div>
+    </body>
 </html>
