second commit: edited login.html, contact.html.

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     
     <body>
         <div id=header-background>
-            <div id="top-bar">
-                <div class="top-bar-button">
+            <div class="top-bar">
+                <div>
                     <a href="/">Home</a>
                 </div>
-                <div class="top-bar-button">
-                    <a href="about.html" target="_blank">About</a>
+                <div>
+                    <a href="about.html">About</a>
                 </div>
-                <div class="top-bar-button">
-                    <a href="contact.html" target="_blank">Contact</a>
+                <div>
+                    <a href="contact.html">Contact</a>
                 </div>
-                <div class="top-bar-button">
-                    <a href="login.html" target="_blank">Login</a>
+                <div>
+                    <a href="login.html">Login</a>
                 </div>
             </div>
 
