--- a/login.html
+++ b/login.html
@@ -10,23 +10,29 @@
     <body>
         <div id="login-background">
 
-
-            <div id="top-bar">
+            <div class="top-bar">
                 <div class="top-bar-button">
                     <a href="/">Home</a>
                 </div>
                 <div class="top-bar-button">
-                    <a href="about.html" target="_blank">About</a>
+                    <a href="about.html">
+                        <span>About</span>
+
+                    </a>
                 </div>
                 <div class="top-bar-button">
-                    <a href="contact.html" target="_blank">Contact</a>
+                    <a href="contact.html">
+                        <span>Contact</span>
+                    </a>
                 </div>
                 <div class="top-bar-button">
-                    <a href="login.html" target="_blank">Login</a>
+                    <a href="login.html">
+                        <span>Login</span>
+                    </a>
                 </div>
             </div>
 
-            <div id="login-block-container">
+            <div class="login-block-container">
                 <div id="login-block">
                     <div id="login-title">
                         <h1>Login</h1>
@@ -36,7 +42,7 @@
                         <h1>Sign in to your account</h1>
                     </div>
 
-                    <div id="login-input-container">
+                    <div class="login-input-container">
                         <div class="login-input-box">
                             <input id="login-input-text" type="text" placeholder="Username">
                         </div>
@@ -49,7 +55,8 @@
                         <button id="login-button" type="button">Login</button>
 
                         <div id="login-input-container">
-                            Forgot your password? Click here to reset.
+                            Forgot your password? 
+                            <a href="reset.html" target="_blank">Click here to reset.</a>
                         </div>
                         
                     </div>
